css/main.css
#graph {
    height: 300px;
    width: 100%;
}

#fileLoader {
    position: absolute;
    top: -100px;
}

.btn-wrap {
    text-align: center;
    margin: 50px 0;
}

#centralityMenu {
    text-align: center;
    margin-top: 50px;
}

.topHead {
    margin-top: 0px !important;
}

.sort {
    margin-left: 10px;
}

.modal-body {
    text-align: center;
}

#resultTable {
    margin-top: 50px;
    text-align: left;
}

.fileFormat {
    font-size: small;
    text-align: center;
}

#title {
    text-align: center;
}

#subtitle {
    text-align: center;
}

.btn-wrap .btn-primary {
    width: 200px;
    margin: 0 10px;
}

.collapse h3 {
    display: inline-block;
}

.collapse .btn {
    float: right;
    margin-top: -7px;
    margin-right: -12px;
}

#centralityMenu button {
    margin: 5px;
}

